# dsa-in-ocaml

proj/: Makefile  dune-project  proj.opam
proj/src/lib/: a.ml  dune  linked_list.ml  stack.ml
proj/src/test/: dune
proj/test/: run_tests.ml
